@@ -1,5 +1,5 @@
 # Copyright (c) 2021-2024 Patricio Cubillos
-# puppies is open-source software under the MIT license (see LICENSE)
+# puppies is open-source software under the GNU GPL-2.0 license (see LICENSE)
 
 from packaging import version
 
