@@ -1,5 +1,5 @@
-# Copyright (c) 2021-2022 Patricio Cubillos
+# Copyright (c) 2021-2024 Patricio Cubillos
 # puppies is open-source software under the GNU GPL-2.0 license (see LICENSE)
 
 # puppies Version:
-__version__ = '0.2.0a2'
+__version__ = '0.3.0'
